tests/ui-nightly/transmute-ref-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-src-not-a-reference.rs:15:49
   |
15 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ---------------^^^^^^-
   |                                  |              |
   |                                  |              expected `&_`, found `usize`
   |                                  expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
15 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(&0usize);
   |                                                 +
